<resources>
    <string name="app_name">DiChattinZ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_in_with_facebook">Facebook</string>
    <string name="sign_in_with_google">Google</string>
    <string name="forgotten_your_credentials">Forgotten your login credentials?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="get_help">Get Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="save">Save</string>
    <string name="type_description_here">Type description here...</string>
    <string name="new_post">New Post</string>
    <string name="select_an_image_source">Select an image source:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>