<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/new_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_dialog_img_vw"
            />

        <ImageView
            android:id="@+id/add_dialog_img_vw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 1.2:1"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/placeholder_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_dialog_title"
            />

        <TextView
            android:id="@+id/image_source_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/select_an_image_source"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/add_dialog_img_vw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/gallery_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/image_source_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/camera_btn"
            />

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintBaseline_toBaselineOf="@id/gallery_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gallery_btn"
            />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="15sp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/type_description_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gallery_btn"
            app:layout_constraintBottom_toTopOf="@id/add_dialog_save_btn"
            />

        <Button
            android:id="@+id/add_dialog_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/description_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>